--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,8 @@ h1 {
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
+/* Header */
+
 header {
     width: 100%;
     display: flex;
@@ -66,13 +68,19 @@ nav a:first-child {
     border-left: 0 none;
 }
 
+/* Main Content Area */
+
+.marginBox {
+    margin: 18px;
+}
+
 .mainContent {
     display: flex;
     flex-direction: column;
     width: auto;
     max-width: 960px;
-    flex: 1 0 auto;
-    margin: 1em;
+    flex: 1 1 auto;
+    margin: 1em auto;
     padding: 1.250em;
     color: #777777;
     background: #ffffff;
@@ -92,12 +100,14 @@ nav a:first-child {
     margin: auto 1em auto 0;
 }
 
+/* Footer */
+
 footer {
     display: flex;
     flex-shrink: 0;
     text-align: center;
     justify-content: center;
-    padding: 0px;
+    padding: 0;
     color: #ffffff;
     background-color: #666666;
     border-top: 10px solid #4aaaa5;
@@ -109,7 +119,6 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    /* align-content: flex-start; */
 }
 
 .portfolioThumbnail {
@@ -122,6 +131,7 @@ footer {
 .portfolioThumbnail img {
     width: 100%;
     height: 100%;
+    max-height: 318px;
     object-fit: cover;
 }
 
@@ -132,18 +142,21 @@ footer {
     padding: .25em;
     margin-bottom: 0;
     font-weight: 300;
-    /* line-height: 30px; */
     color: #fff;
     text-align: center;
     background: #4aaaa5;
-    /* border-bottom: 0; */
-  }
+}
 
 /* Contact Page */
+
+.contactContent{
+    width: 100%;
+}
 
 #contact-form ul {
     margin-bottom: 20px;
     list-style-type: none;
+    padding: 0;
 }
 
 #contact-form li {
@@ -179,25 +192,22 @@ input[type=submit] {
     background: #4aaaa5;
     border: 0 none;
 }
-  
-@media screen and (min-width: 39em) {
+
+/* Media Queries */
+
+@media screen and (min-width: 40em) {
+    header {padding: 0 18px 0 18px;}
     .flexContainer {flex-direction: row;}
-    .logo {width: initial; margin-left: 18px;}
+    .flexContainer > .spacer {display: block;}
+    .logo {width: initial;}
     .portfolioThumbnail {
         width: calc(50% - 30px);
-        /* max-width: calc(50% - 30px); */
     }
-    /* .gallery:nth-child(even) {
-        margin-right: 40px;
-    } */
 }
 
-@media screen and (min-width: 48em) {
-    /* .flexContainer {margin-right: -1em;} */
-    .mainContent {margin: 1em auto; width: 960px}
-    .logo {margin: 0;}
+@media screen and (min-width: 52em) {
     .portfolioThumbnail {
         width: calc(33.3% - 30px);
-        /* max-width: calc(33.3% - 30px); */
+        max-height: 232.94px;
     }
 }
