--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ header {
     justify-content: center;
     padding: 0;
     border-bottom: 3px solid #cccccc;
-    background: #ffffff;
+    background: #ffffff !important;
 }
 
 .flexContainer {
